# seqcdc-rs-mb

./: Cargo.toml  LICENSE  README.md  projectBrief.md
.github/workflows/: test.yml
benches/: chunking_benchmark.rs
examples/: basic_usage.rs  file_processing.rs
src/: chunker.rs  config.rs  error.rs  lib.rs  utils.rs
